syntax = "proto3";
package registry;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";

import "registry/chain.proto";
import "registry/ibc.proto";
import "registry/mnemonic.proto";

option go_package = "github.com/hyperweb-io/starship/registry/registry";

// Interface for service
service Registry {
  // ListChainIDs will return all the ids for registered chains
  rpc ListChainIDs(google.protobuf.Empty) returns (ResponseChainIDs) {
    option (google.api.http) = { get: "/chain_ids" };
  }
  // ListChains will fetch all the current chain.json for
  // the registered chains in registry
  rpc ListChains(google.protobuf.Empty) returns (ResponseChains) {
    option (google.api.http) = { get: "/chains" };
  }
  rpc GetChain(RequestChain) returns (ChainRegistry) {
    option (google.api.http) = { get: "/chains/{chain}" };
  }
  rpc GetChainKeys(RequestChain) returns (Keys) {
    option (google.api.http) = { get: "/chains/{chain}/keys" };
  }
  // ListChainPeers will fetch all the nodes and addresses
  rpc ListChainPeers(RequestChain) returns (Peers) {
    option (google.api.http) = { get: "/chains/{chain}/peers" };
  }
  // ListChainAPIs will fetch all the nodes and addresses
  rpc ListChainAPIs(RequestChain) returns (APIs) {
    option (google.api.http) = { get: "/chains/{chain}/apis" };
  }
  rpc GetChainAssets(RequestChain) returns (ResponseChainAssets) {
    option (google.api.http) = { get: "/chains/{chain}/assets" };
  }
  // ListIBCs will fetch all the current IBC connections
  rpc ListIBC(google.protobuf.Empty) returns (ResponseListIBC) {
    option (google.api.http) = { get: "/ibc" };
  }
  // ListChainIBC will fetch all the current IBC connections for the chain
  rpc ListChainIBC(RequestChain) returns (ResponseListIBC) {
    option (google.api.http) = { get: "/ibc/{chain}" };
  }
  // GetIBCInfo will fetch all the current IBC connections
  rpc GetIBCInfo(RequestIBCInfo) returns (IBCData) {
    option (google.api.http) = { get: "/ibc/{chain_1}/{chain_2}" };
  }
}

message ResponseChains {
  repeated ChainRegistry chains = 1 [json_name = "chains"];
}

message ResponseChainIDs {
  repeated string chain_ids = 1 [json_name = "chain_ids"];
}

message RequestChain {
  string chain = 1 [json_name = "chain"];
}

message ResponseChainAssets {
  string schema = 1 [json_name = "$schema"];
  string chain_name = 2 [json_name = "chain_name"];
  repeated ChainAsset assets = 3 [json_name = "assets"];
}

message ResponseListIBC {
  repeated IBCData data = 1 [json_name = "data"];
}

message RequestIBCInfo {
  string chain_1 = 1 [json_name = "chain_1"];
  string chain_2 = 2 [json_name = "chain_2"];
}
